[package]
name = "rag-local"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
zip = "2.1"
pdf-extract = "0.7"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
roxmltree = "0.20"  # Untuk parsing DOCX yang nyata
scraper = "0.20"    # Untuk parsing HTML yang nyata